[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Dragoleta <jorgelucasdantas@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
websockets = "^12.0"


[tool.poetry.group.DEV.dependencies]
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
